<resources>
    <string name="app_name">CPad Customize Tool</string>
    <string name="activity_main">カスタマイズツール</string>
    <string name="activity_start">設定</string>
    <string name="activity_emergency">緊急モード</string>
    <string name="activity_normal">通常モード</string>
    <string name="activity_app_info">アプリの情報</string>
    <string name="activity_self_update">アップデート</string>
    <string name="activity_reboot">再起動</string>
    <string name="activity_uninstall_block">アンインストールブロッカー</string>
    <string name="activity_crash_log">クラッシュログ</string>
    <string name="service_keep">維持サービス</string>
    <string name="service_protect_keep">停止防御サービス</string>
    <string name="wel_title_page_1">CPad Customize Tool へ\nようこそ！</string>
    <string name="wel_title_page_2">ナビゲーションバーの常時表示</string>
    <string name="wel_title_page_3">緊急モード</string>
    <string name="wel_description_page_2">学習中も、常にナビゲーションバーを表示します。</string>
    <string name="wel_description_page_3">瞬時に、勉強環境へ変更します。\n\n\"ユーザー補助\"\nホームボタンと音量ボタンのみで\n勉強環境との切り替えができます。\n\nボタンによる切り替えを使用するには、ユーザー補助を設定してください。</string>
    <string name="wel_title">利用規約</string>
    <string name="wel_disagree">同意しない</string>
    <string name="wel_agree">同意する</string>
    <string name="wel_terms_of_service"><![CDATA[この利用規約（以下、「本規約」といいます。）は、Kobold831（以下、「開発者」といいます。）が提供するアプリケーション「チャレンジパッド総合カスタマイズツール」（以下、「本アプリ」といいます。）に関するサービス（以下、「本サービス」といいます。）の利用条件を定めるものです。\n
\n
第1条　適用\n
\n
1. 本規約は、本アプリの利用者（以下、「ユーザー」といいます。）に適用されるものとします。\n
2. ユーザーは、本アプリによりユーザーの端末画面に表示されている下部の「同意する」を押すことにより、本規約に同意したものとみなされます。\n
3. 本規約に同意しない限り、ユーザーは本アプリを利用することができません。\n
4. ユーザは、本規約に従って、本アプリを利用するものとします。\n
\n
第2条　ユーザー情報\n
\n
1. 本アプリは、利便性を向上させるため、ユーザーの端末システム情報およびユーザーの端末上にインストールされているアプリケーション（以下、「インストールアプリ」といいます。）の名称、バージョン、システム情報（以下、「ユーザー情報」といいます。）を取得することがあります。\n
2. 本アプリが取得するユーザー情報には、ユーザーの個人情報およびインストールアプリのデータ情報を含みません。\n
\n
第3条　利用条件\n
\n
1. ユーザーは、開発者が定めるシステム、機能、要件（以下、「仕様基準」といいます。）に従わない限り、本アプリまたは本サービスの一部を利用できない場合があることを了承されるものとします。\n
\n
第4条　連絡\n
\n
1. 本アプリおよび本サービスについて開発者からユーザーへの連絡は、本アプリ内または本アプリを頒布している Web サイト、開発者が適当と判断する方法により連絡するものとします。\n
\n
第5条　禁止事項\n
\n
1.ユーザーは、本アプリおよび本サービスを利用するにあたり、以下の行為をしてはいけません。\n
(1) Apache License 2.0 の範囲を超えてこのソフトウェアを使用、複製、または配布すること。\n
\n
第6条　保証の否認および免責事項\n
\n
1. 開発者は、本アプリおよび本サービスに関して安全性、信頼性、正確性、完全性、有効性、適法性、特定の目的への適合性を含む事実上または法律上の瑕疵がないことを明示的にも黙示的にも保証しません。セキュリティ欠陥、エラー、バグについても保証しません。\n
2. 開発者は、本アプリおよび本サービスによりユーザーに生じたあらゆる損害について、すべて責任を負いません。\n
3. 開発者は、本アプリまたは本サービスに関して仕様基準に従っている場合に限らず、正常に動作することを保証しません。\n
4. 開発者は、本アプリまたは本サービスに関してユーザーの端末システムおよびインストールアプリのバージョンアップまたはバージョンダウンが行われた場合において、正常に動作することを保証しません。\n
\n
第7条　本規約の変更\n
\n
1. 開発者は、ユーザーの承諾を得ることなく、本規約をいつでも変更できるものとします。\n
2. ユーザーは、変更後の本規約の効力が生じた場合に本アプリを利用するにあたり、変更後の本規約に従うものとして、変更後の本規約の内容に同意したものとみなします。\n
3. 変更後の本規約は、改定日から効力が生じるものとします。\n
\n
第8条　準拠法\n
\n
1. 本規約の解釈は、日本法に準拠されるものとします。\n
\n
附則\n
2025年3月30日 施行]]></string>
    <string name="pre_main_category_system_ui">システム UI 設定</string>
    <string name="pre_main_category_system">システム設定</string>
    <string name="pre_main_category_emergency_mode">緊急モード</string>
    <string name="pre_main_category_change_to_normal_mode">通常モード</string>
    <string name="pre_main_category_other_settings">Dcha アプリ機能</string>
    <string name="pre_main_category_device_admin">デバイス管理者設定</string>
    <string name="pre_main_category_assist">アシスト機能</string>
    <string name="pre_main_title_system_ui">システム UI の学習モード</string>
    <string name="pre_main_title_keep_system_ui">システム UI の通常モードを維持</string>
    <string name="pre_main_title_navigation_bar">ナビゲーションバーの非表示</string>
    <string name="pre_main_title_keep_navigation_bar">ナビゲーションバーの表示を維持</string>
    <string name="pre_main_title_usb_debug">USB デバッグ</string>
    <string name="pre_main_title_keep_usb_debug">USB デバッグを維持</string>
    <string name="pre_main_title_non_market">不明なアプリのインストール</string>
    <string name="pre_main_title_keep_non_market">不明なアプリのインストールを維持</string>
    <string name="pre_main_title_change_home">ホームアプリ</string>
    <string name="pre_main_title_keep_home">ホームアプリを維持</string>
    <string name="pre_main_title_other_settings">デバイスの設定</string>
    <string name="pre_main_title_select_course">受講中の講座</string>
    <string name="pre_main_title_change_settings">緊急モードの設定</string>
    <string name="pre_main_title_manual">緊急モードの説明</string>
    <string name="pre_main_title_emg_execute">緊急モードを起動</string>
    <string name="pre_main_title_emg_shortcut">緊急モードのショートカットをホームに追加</string>
    <string name="pre_main_title_change_to_normal_mode_settings">通常モードの設定</string>
    <string name="pre_main_title_launcher">変更するホーム</string>
    <string name="pre_main_title_normal_mode_manual">通常モードの説明</string>
    <string name="pre_main_title_nor_execute">通常モードを起動</string>
    <string name="pre_main_title_nor_shortcut">通常モードのショートカットをホームに追加</string>
    <string name="pre_main_title_use_dcha">DchaService 機能</string>
    <string name="pre_main_title_reboot">再起動</string>
    <string name="pre_main_title_reboot_shortcut">再起動のショートカットをホームに追加</string>
    <string name="pre_main_title_silent_install">サイレントインストール</string>
    <string name="pre_main_title_resolution">解像度</string>
    <string name="pre_main_title_resolution_reset">解像度のリセット</string>
    <string name="pre_main_title_system_update">システムアップデート</string>
    <string name="pre_main_title_device_owner">デバイスオーナーの機能</string>
    <string name="pre_main_title_device_admin">デバイス管理者</string>
    <string name="pre_main_title_get_app">おすすめのアプリを取得</string>
    <string name="pre_main_sum_message_1">\"%1$s\" は、この機能を使用できません。</string>
    <string name="pre_main_sum_message_2">ホームは、\"%1$s\" に設定されています。</string>
    <string name="pre_main_sum_already_device_owner">デバイスオーナーのため、変更できません。</string>
    <string name="pre_main_sum_no_setting_launcher">ホームは、設定されていません。</string>
    <string name="pre_main_sum_check_enabled">この機能を使用するには、\"%1$s\" を有効にしてください。</string>
    <string name="pre_main_sum_keep_home">現在のホームを維持します。バッテリーの消耗を防ぐために、およそ 10 秒間隔で監視します。</string>
    <string name="pre_main_sum_other">画面表示と明るさ</string>
    <string name="pre_main_sum_emg_course">緊急モードを使用するときは、受講中の講座に設定してください。</string>
    <string name="pre_main_sum_change_settings">デフォルトは、すべての設定を変更します。</string>
    <string name="pre_main_sum_emg_manual">使用するにあたり、注意することを確認してください。</string>
    <string name="pre_main_sum_emg_execute">"起動すると、学習環境に変更します。</string>
    <string name="pre_main_sum_change_to_normal_mode_settings">デフォルトは、すべての設定を変更します。</string>
    <string name="pre_main_sum_nor_execute">起動すると、通常環境に変更します。</string>
    <string name="pre_main_sum_reboot">デバイスを再起動します。</string>
    <string name="pre_main_sum_silent_install">単一APK をインストールできます。\n分割APK は、\"デバイスオーナーの機能\" -> \"サイレントインストール\" からインストールできます。</string>
    <string name="pre_main_sum_res">画面解像度を任意の値に変更します。</string>
    <string name="pre_main_sum_res_reset">画面解像度をリセットします。</string>
    <string name="pre_main_sum_system_update">デバイスのシステムをアップデートします。</string>
    <string name="pre_main_sum_dcha_function">再起動、インストール、解像度、システム更新</string>
    <string name="pre_main_sum_device_owner">アンインストールブロック、サイレントインストール</string>
    <string name="pre_main_sum_device_admin">このアプリがアンインストールされないようにします。</string>
    <string name="pre_main_sum_app_function">緊急モード、通常モード</string>
    <string name="pre_main_sum_get_app">表示されるダイアログからアプリを選択してください。\nインストーラーは、\"アプリ設定\" -> \"インストールモード\" から変更できます。</string>
    <string name="pre_app_category_start_settings">起動設定</string>
    <string name="pre_app_category_noti">通知設定</string>
    <string name="pre_app_category_settings">アプリ設定</string>
    <string name="pre_app_category_update">インストール設定</string>
    <string name="pre_app_category_log">アプリログ</string>
    <string name="pre_app_title_update_check">アップデートチェックをしない</string>
    <string name="pre_app_title_dcha">DchaService による設定の変更</string>
    <string name="pre_app_title_update">インストールモード</string>
    <string name="pre_app_title_crash_history">クラッシュログ</string>
    <string name="pre_app_title_delete_crash_history">クラッシュログの消去</string>
    <string name="pre_app_sum_dcha">オフにすると、設定変更に \"DchaService\" を使用しません。</string>
    <string name="pre_app_sum_confirmation_dcha">この機能を使用するには、\"DchaService 機能\" を有効にしてください。</string>
    <string name="pre_owner_title_uninstall_block">アンインストールブロッカー</string>
    <string name="pre_owner_title_permission">ランタイム権限の強制付与</string>
    <string name="pre_owner_title_silent_install">サイレントインストール</string>
    <string name="pre_owner_title_device_owner">デバイスオーナーの解除</string>
    <string name="pre_owner_sum_message_1">デバイスオーナーは、\"<b>%1$s</b>\" に設定されています。</string>
    <string name="pre_owner_sum_no_device_owner">デバイスオーナーは、設定されていません。</string>
    <string name="pre_owner_sum_not_use_function">デバイスオーナーではないため、この機能は使用できません。</string>
    <string name="pre_owner_sum_uninstall_block">ユーザーアプリのアンインストールをブロックします。</string>
    <string name="pre_owner_sum_silent_install">単一APK、分割APK (xapk, apkm, apks) をインストールできます。\n分割APK のインストールは、ファイルを \"<b>長押し</b>\" すると選択できます。</string>
    <string name="pre_owner_sum_permission_forced">デバイスポリシーは、ユーザーアプリのランタイム権限を強制付与します。</string>
    <string name="pre_owner_sum_permission_default">デバイスポリシーは、デフォルトです。</string>
    <string name="pre_other_title_settings">Android 設定を開く</string>
    <string name="pre_other_title_development">開発者向けオプションを開く</string>
    <string name="pre_other_title_adjustment">システム UI 調整ツールを開く</string>
    <string name="pre_other_title_screen_off_time">スリープ</string>
    <string name="menu_app_info">アプリの情報</string>
    <string name="menu_app_settings">アプリの設定</string>
    <string name="menu_app_update">アップデート</string>
    <string name="dialog_common_ok">OK</string>
    <string name="dialog_common_cancel">キャンセル</string>
    <string name="dialog_common_yes">はい</string>
    <string name="dialog_title_update">アプリの更新</string>
    <string name="dialog_title_error">エラーの発生</string>
    <string name="dialog_title_notice_start">はじめに</string>
    <string name="dialog_title_grant_permission">権限設定</string>
    <string name="dialog_title_emergency_manual">緊急モード</string>
    <string name="dialog_title_normal_manual">通常モード</string>
    <string name="dialog_title_resolution">解像度</string>
    <string name="dialog_title_launcher">ホーム</string>
    <string name="dialog_title_select_mode">モード</string>
    <string name="dialog_app_start_message">ウイルス対策アプリなどに脅威として検知される場合があります。\n検知された場合は、除外設定してください。\nこのダイアログは以降表示されません。</string>
    <string name="dialog_mode_select_settings">変更を確定するには、\"OK\" を押してください。</string>
    <string name="dialog_emergency_manual">この機能は、アクティビティを呼び出すことで使用できます。\n<b>ユーザー補助を設定すると、ボタンコンボで起動できます。</b>\nアクティビティを呼び出すアプリで使用する場合は、アクティビティ一覧から、\"<b>緊急モード (.view.activity.EmergencyActivity)</b>\" を選択してください。</string>
    <string name="dialog_emergency_manual_red">システム UI を変更するため、\"ユーザ補助の設定\"、または \"アクティビティを起動させるアプリをインストール\" しないと、初期化以外に勉強ホームから抜け出すことができなくなります。\n\"アプリ履歴の全消去\" はナビゲーションバーの□ボタンを押すと表示されるアプリを終了します。</string>
    <string name="dialog_normal_manual">この機能は、アクティビティを呼び出すことで使用できます。\n<b>ユーザー補助を設定すると、ボタンコンボで起動できます。</b>\nアクティビティを呼び出すアプリで使用する場合は、アクティビティ一覧から、\"<b>通常モード (.view.activity.NormalActivity)</b>\" を選択してしてください。</string>
    <string name="dialog_dcha_warning">このデバイスのシステム領域を DchaService が変更していないことを検知しました。\n続行すると一部の動作がシステムで制限される可能性があります。</string>
    <string name="dialog_failure">失敗しました。</string>
    <string name="dialog_no_update">アップデートはありません。</string>
    <string name="dialog_disable_device_admin">デバイス管理者を無効にしますか?</string>
    <string name="dialog_failure_silent_install">サイレントインストールに失敗しました。</string>
    <string name="dialog_success_silent_install">サイレントインストールに成功しました。</string>
    <string name="dialog_no_installer">インストーラーは、設定されていません。インストーラーを設定してください。\n\nADB でインストールするには、次の URL から PC でダウンロードしてください。\n%1$s</string>
    <string name="dialog_dhizuku_grant_permission">Dhizuku へのアクセス権限は付与されました。</string>
    <string name="dialog_dhizuku_deny_permission">Dhizuku へのアクセス権限は拒否されました。</string>
    <string name="dialog_dhizuku_require_12">Dhizuku の更新を推奨します。\n最新の Dhizuku をインストールしてください。\n機能は使用できますが、完全に動作しない可能性があります。\nメイン画面の \"おすすめのアプリを取得\" から、Dhizuku を選択して更新してください。</string>
    <string name="dialog_question_reboot">デバイスを再起動しますか?</string>
</resources>