<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerAbove="false"
        android:title="@string/pre_app_category_start_settings">

        <SwitchPreferenceCompat
            android:key="pre_app_update_check"
            android:title="@string/pre_app_title_update_check" />
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        android:title="@string/pre_app_category_settings">

        <SwitchPreferenceCompat
            android:key="pre_app_use_dcha"
            android:title="@string/pre_app_title_dcha"
            android:summary="@string/pre_app_sum_dcha" />

        <SwitchPreferenceCompat
            android:key="pre_app_adb"
            android:title="@string/pre_app_title_usb"
            android:summary="@string/pre_app_sum_usb" />
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        android:title="@string/pre_app_category_update">

        <Preference
            android:key="pre_app_update_mode"
            android:title="@string/pre_app_title_update" />
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        android:title="@string/pre_app_category_log">

        <Preference
            android:key="pre_app_crash_log"
            android:title="@string/pre_app_title_crash_history" />

        <Preference
            android:key="pre_app_del_crash_log"
            android:title="@string/pre_app_title_delete_crash_history" />
    </PreferenceCategory>
</PreferenceScreen>