<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:title="@string/pre_app_category_start_settings">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="pre_app_update_check"
            android:title="@string/pre_app_title_update_check" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="pre_app_simple_mode"
            android:title="シンプルモード"
            android:summary="アプリが起動したときに、表示される画面をシンプルにします。" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:title="@string/pre_app_category_settings">

        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="pre_app_normal_env"
            android:title="通常環境モード" />

        <Preference
            app:selectable="false"
            android:key="pre_install_unknown_source_info"
            android:icon="@drawable/ic_info_outline_24"
            android:summary="この機能を使用すると、学習兼用機能（緊急モード、通常モード、維持機能、そのほか一部）は、無効になり非表示になります。設定変更などで、Dcha、BenesseExtension は使用しなくなります。" />

        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="pre_app_use_dcha"
            android:summary="@string/pre_app_sum_dcha"
            android:title="@string/pre_app_title_dcha" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_clear_cache"
            android:summary="このアプリの不要ファイルを消去します。"
            android:title="キャッシュをクリア" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_clear_data"
            android:summary="このアプリのデータを消去します。"
            android:title="ユーザーデータをクリア" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:title="@string/pre_app_category_update">

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_update_mode"
            android:summary="アップデートやアプリを取得するときのインストーラーを変更できます。"
            android:title="@string/pre_app_title_update" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:title="@string/pre_app_category_log">

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_crash_log"
            android:summary="アプリが予期せず終了したときのログを確認できます。"
            android:title="@string/pre_app_title_crash_history" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_del_crash_log"
            android:title="@string/pre_app_title_delete_crash_history" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:title="@string/pre_app_category_noti">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="pre_app_noti_always"
            android:summary="バックグラウンドでの自動タスクキルを防ぎます。"
            android:title="@string/pre_app_title_noti_always" />

    </PreferenceCategory>

    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        android:key="pre_app_category_debug"
        android:title="デバッグ">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="pre_app_debug_restriction"
            android:title="制限の解除" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_debug_force_crash"
            android:title="クラッシュ" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="pre_app_debug_device"
            android:title="デバイス" />

    </PreferenceCategory>

</PreferenceScreen>
